Ajout de la liste des clients dans la home + ajout de la barre des réseaux sociaux sur toutes les pages + indentation du code + commentaires dans code

--- a/home.html
+++ b/home.html
@@ -184,6 +184,13 @@
     <div class="container ">
         <!-- Two columns of text below the Box -->
         <div class="row-fluid themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible left-to-right"><!-- box-style row Class .box-style -->
+            <!--   hr-Start-->	
+			<div class="hr hr-left"> <!--   hr-center/ hr-left/ hr-right/  hr-short/ hr-light/-->
+				<span class="hr-inner">
+					<span class="hr-inner-style"></span>
+				</span>
+			</div>
+			<!--   hr-Close-->
             <h1>
                 Vous > <i>" Bonjour, qui est Sparkline ? Que faites-vous ? "</i></br>
                 <span>Sparkline > </span><i>" Bonjour, nous sommes un cabinet de recrutement spécialisé dans les nouvelles technologies du web et dans le Big Data. "</i></br>
@@ -198,13 +205,80 @@
 			</div>
 			<!--   hr-Close-->	  
             <p>
-                <a class="button purchase themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible top-to-bottom" href="chassedejobs.html"><span class="icon-link"></span>Découvrez la chasse de jobs</a>
+                <a class="button purchase themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible top-to-bottom" href="chassedejobs.html"><span class="icon-info"></span>Découvrez la chasse de jobs</a>
             </p>
         </div><!-- /.row -->
 	</div><!-- /.container -->
 </div><!-- /.col -->
-	
-<!-- BAR DES RESEAUX SOCIAUX -->
+
+<!-- LISTE DES CLIENTS -->
+<div class="col-wrap "><!-- style col-shadow/ col-gray/ testimonial/-->
+    <div class="container ">
+        <!-- Two columns of text below the Box -->
+        <div class="row-fluid"><!-- box-style row Class .box-style -->
+            <h1>Ils nous font confiance</h1>
+            <!--   hr-Start-->	
+			<div class="hr hr-left"> <!--   hr-center/ hr-left/ hr-right/  hr-short/ hr-light/-->
+				<span class="hr-inner">
+					<span class="hr-inner-style"></span>
+				</span>
+			</div>
+			<!--   hr-Close-->
+            <ul class="pagenavi cl_nav">
+                <li><a class="prev" href="#"><span class="icon-arrow-left-5"></span></a></li>
+                <li><a class="next" href="#"><span class="icon-arrow-right-5"></span></a></li>
+            </ul>
+            <div class="span12 themeapt-gallery  themeapt_animate_when_visible">
+                <div class="client themeapt-gallery-thumb">
+                    <ul>
+                        <li>
+                            <a href="http://www.data-publica.com" class="bwWrapper featured ">
+                                <img src="images/clients/data_publica.jpeg" alt="Data Publica">
+                            </a>
+                        </li>
+						<li>
+                            <a href="#" class="bwWrapper featured ">
+                                <img src="images/clients/digitalandyou.png" alt="Digital & You">
+                            </a>
+                        </li>
+						<li>
+                            <a href="#" class="bwWrapper featured ">
+                                <img src="images/clients/octo.jpeg" alt="Octo Technology">
+                            </a>
+                        </li>
+						<li>
+                            <a href="#" class="bwWrapper featured ">
+                                <img src="images/clients/pumpkin.png" alt="Pumpkin">
+                            </a>
+                        </li>
+						<li><a href="#" class="bwWrapper featured ">
+                            <img src="images/clients/tellmeplus.jpeg" alt="Tell Me Plus">
+                            </a>
+                        </li>
+						<li>
+                            <a href="#" class="bwWrapper featured ">
+                                <img src="images/clients/textkernel.jpeg" alt="TextKernel">
+                            </a>
+                        </li>
+						<li>
+                            <a href="#" class="bwWrapper featured ">
+                                <img src="images/clients/tracktl.jpeg" alt="TrackTL">
+                            </a>
+                        </li>
+						<li>
+                            <a href="#" class="bwWrapper featured ">
+                                <img src="Images/clients/zoomdle.png" alt="Zoomdle">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div><!-- /.span4 -->
+        </div><!-- /.row -->		 
+    </div><!-- /.container -->
+</div><!-- /.col -->	
+<!-- FIN LISTE CLIENTS --> 
+
+<!-- BARRE DES RESEAUX SOCIAUX -->
 <div class="col-wrap shear-icon-box col-gray"><!-- style col-shadow/ col-gray/ testimonial/-->
     <div class="container ">		 
         <div class="row-fluid">
@@ -226,7 +300,8 @@
             </div><!-- /.span12 -->
         </div><!-- /.row-fluid -->
     </div>
-</div><!-- /.col -->	
+</div><!-- /.col -->
+
 
 <!--FOOTER -->
 <div class="footerbox col-shadow">
