modif sur team.html : reduction taille des photos des fondateurs + taille du texte de présentation. Cette fois-ci avec le fichier team.html

--- a/team.html
+++ b/team.html
@@ -143,17 +143,16 @@
 			</span>
         </div>
 		<!--   hr-Close-->
-        <h3>Tous deux, après des premières expériences dans le développement informatique et dans le placement de consultants IT, nous avons créé Sparkline pour offrir aux candidats un service d'accompagnement dans leur recherche de nouveaux postes. Un service sur-mesure qu'on aurait souhaité pour nous.</h3> 
+        <p>Tous deux, après des premières expériences dans le développement informatique et dans le placement de consultants IT, nous avons créé Sparkline en 2014 pour offrir aux candidats un service d'accompagnement dans leur recherche de nouveaux postes. Un service sur-mesure qu'on a conçu en se mettant dans leur position.</p> 
         <!-- Two columns of text below the Box -->
         <div class="row-fluid">
             <!-- Elinore Thomas -->
-            <div class="span6 first">
+            <div class="span4 first">
                 <div class="team services animationBegin">
                     <div class="team-img">
                         <img class='themeapt_animated_image themeapt_image themeapt_animate_when_almost_visible left-to-right' src="images/team/elinore_thomas.jpg" alt="Elinore Thomas">
                         <div class="t_hover">
-                            <p>A propos d'<b>Elinore Thomas</b></p>
-                            <p>Diplômée d’un Master de Mathématiques Appliquées j’ai tout d’abord été consultante en Informatique Scientifique pendant 2 ans.</br>J’ai par la suite exercé la fonction d’ingénieur commercial au sein de plusieurs cabinets de conseil dans le secteur de la finance de marché avant de créer Sparkline.</p>
+                            <p>Diplômée d’un Master de Mathématiques Appliquées en 2007, d'abord consultante en Informatique Scientifique pendant 2 ans puis j'ai exercé la fonction d’ingénieur commercial au sein de plusieurs cabinets de conseil dans le secteur de la finance de marché avant de créer Sparkline.</p>
                         </div>				 
 				    </div>
                     <div class="team-data">
@@ -172,13 +171,12 @@
                 </div><!-- /team-item -->
             </div><!-- /.span4 -->
             <!-- Hadil Filali -->
-            <div class="span6">
+            <div class="span4">
                 <div class="team services animationBegin">
                     <div class="team-img">
                         <img class='themeapt_animated_image themeapt_image themeapt_animate_when_almost_visible right-to-left' src="images/team/hadil_filali.jpg" alt="hadil filali">
                         <div class="t_hover">
-                            <p>A propose d'<b>Hadil Filali</b></p>
-                            <p>Diplômé d’un Master 2 en Informatique en 2002 puis d’un MBA à la Sorbonne en 2012, j’ai travaillé pendat 9 ans sur le développement d'applications sur les technologies Java/J2E.</br>Je suis par la suite devenu ingénieur commercial au sein d'un cabinet de conseil informatique avant de créer Sparkline.</br> Je reste néanmoins un passionné de nouvelles technologies et de techniques de recrutement, j’exerce une veille régulière sur différents thèmes (Recrutement 2.0, BigData, Growth Hacking, les Startups, ...).</p>
+                            <p>Diplômé d’un Master 2 Informatique en 2002 et d’un MBA à la Sorbonne en 2012, 9 ans sur le développement d'applications sur les technologies Java/J2E, et enfin ingénieur commercial au sein d'un cabinet de conseil informatique avant de créer Sparkline. </p>
                         </div>
                     </div>
                     <div class="team-data">
@@ -212,7 +210,7 @@
             </span>
         </div>
 		<!--   hr-Close-->
-        <h3>Une équipe d'indépendants spécialistes dans leurs domaines, qui nous accompagnent pour évaluer et valider les compétences des candidats.</h3>
+        <p>Une équipe d'indépendants spécialistes dans leurs domaines, qui nous accompagnent pour évaluer et valider les compétences des candidats.</p>
         <!-- Two columns of text below the Box -->
         <div class="row-fluid">
             <!-- Loîc -->
