--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
     <div class="container">
         <!-- LOGO -->
         <div class="logo">
-            <a class="brand" href="home.html"><img src="" alt="logo sparkline"/></a>
+            <a class="brand" href="home.html"><img src="images/logo_sparkline.png" alt="logo sparkline"/></a>
         </div>						
         
         <!-- SUIVEZ-NOUS SUR LES RESEAUX SOCIAUX-->
