--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
     <div class="container">
         <!-- LOGO -->
         <div class="logo">
-            <a class="brand" href="home.html"><img src="" alt="logo sparkline"/></a>
+            <a class="brand" href="home.html"><img src="images/logo_sparkline.png" alt="logo sparkline"/></a>
         </div>						
         
         <!-- SUIVEZ-NOUS SUR LES RESEAUX SOCIAUX-->
@@ -102,7 +102,7 @@
 <!-- BAR TITRE -->
 <div class="title-bar"><!-- style t-shadow/ t-gray/ -->
 	<div class="container ">
-		<h2 class="page-title">CONTACT</h2> <!-- /.page-title -->
+		<h2 class="page-title">Restons en CONTACT</h2> <!-- /.page-title -->
 		<div class="page-root">
 			<a href="home.html">Accueil</a>/
 			<a href="#">Contact</a>			
