ajout de videao dans la barre des réseax sociaux + couleur rouge

--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                         <ul>
                             <li class="s-twitter"><a href="https://twitter.com/sparklinetalks"><span class="icon-twitter"></span>Twitter</a></li>
 							<li class="s-linkedin"><a href="https://www.linkedin.com/company/sparkline-human-finders/"><span class="icon-linkedin"></span>Linkedin</a></li>
-                            <li class="s-twitter"><a href="http://www.viadeo.com/v/company/sparkline"><span class="flaticon-viadeo"></span>Viadeo</a></li>
+                            <li class="s-pinterest"><a href="http://www.viadeo.com/v/company/sparkline"><span class="flaticon-viadeo"></span>Viadeo</a></li>
 				        </ul>
 				    </div>						
 				</li>
@@ -187,6 +187,12 @@
                                 <span class="icon-linkedin">
                             </a>
                         </li>
+                        <li class="s-pinterest themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible right-to-left">
+                            <a href="http://www.viadeo.com/v/company/sparkline/"  rel="viadeo">
+                                <span class="flaticon-viadeo">
+                            </a>
+                        </li>
+                        
 				    </ul>
 				</div>
             </div><!-- /.span12 -->
