modif presentation du pitch

--- a/home.html
+++ b/home.html
@@ -181,36 +181,19 @@
 <!-- FIN SLIDES -->
 
 <!-- PITCH INTRO --> 
-<div class="col-wrap pad"><!-- style col-shadow/ col-gray/ testimonial/-->
-    <div class="container ">
-        <!-- Two columns of text below the Box -->
-        <div class="row-fluid themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible left-to-right"><!-- box-style row Class .box-style -->
-            <!--   hr-Start-->	
-			<div class="hr hr-left"> <!--   hr-center/ hr-left/ hr-right/  hr-short/ hr-light/-->
-				<span class="hr-inner">
-					<span class="hr-inner-style"></span>
-				</span>
-			</div>
-			<!--   hr-Close-->
-            <h1>
-                Vous > <i>" Bonjour, qui est Sparkline ? Que faites-vous ? "</i></br>
-                <span>Sparkline > </span><i>" Bonjour, nous sommes un cabinet de recrutement spécialisé dans les nouvelles technologies du web et dans le Big Data. "</i></br>
-                Vous > <i>" Très bien, mais encore ? "</i></br>
-                <span>Sparkline > </span><i>" C'est notre approche du recrutement qui fait la différence... <span>La chasse de jobs ! "</span></i></br>
-            </h1>	
-            <!--   hr-Start-->	
-			<div class="hr hr-left"> <!--   hr-center/ hr-left/ hr-right/  hr-short/ hr-light/-->
-				<span class="hr-inner">
-					<span class="hr-inner-style"></span>
-				</span>
-			</div>
-			<!--   hr-Close-->	  
-            <p>
-                <a class="button purchase themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible top-to-bottom" href="chassedejobs.html"><span class="icon-info"></span>Découvrez la chasse de jobs</a>
-            </p>
-        </div><!-- /.row -->
-	</div><!-- /.container -->
-</div><!-- /.col -->
+<div class="span12 themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible left-to-right">
+    <div class="blog blogin">
+        <div class="quote">
+            <p><i>#Visiteur : </i>Qu'est-ce que Sparkline ?</p>
+            <p><span><i>#Sparkline</i></span> <i>:</i> Nous sommes un cabinet de recrutement spécialisé dans les nouvelles technologies du Web et dans le Big Data.</p>
+            <p><i>#Visiteur : </i>Mais encore ?</p>
+    <p><span><i>#Sparkline </i></span> <i>:</i> Notre approche du recrutement fait la différence... <span>La chasse de jobs</span></p>
+            <p><a class="button purchase themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible top-to-bottom" href="chassedejobs.html"
+                  <span class="icon-info"></span>
+        Découvrez la chasse de jobs</a></p>
+        </div>
+    </div><!-- /.span4 -->
+</div>
 
 <!-- LISTE DES CLIENTS -->
 <div class="col-wrap "><!-- style col-shadow/ col-gray/ testimonial/-->
