Uniformisation de la police dans les slides de la page d'accueil

--- a/chassedejobs.html
+++ b/chassedejobs.html
@@ -132,8 +132,7 @@
                 <!--   hr-End-->			  
                 <p>Pour apporter une meilleure solution aux candidats et aux entreprises qui recrutent, nous pratiquons une  <b>nouvelle approche du recrutement</b> : </br><span><b>NOUS PARTONS DU CANDIDAT VERS SA FUTURE ENTREPRISE</b></span></p>
                 <p>
-                    <a class="button purchase themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible top-to-bottom" href="team.html"><span class="icon-info"></span>Découvrez l'équipe SPARKLINE
-                    </a>
+                    <a class="button purchase themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible top-to-bottom" href="team.html">Découvrez l'équipe SPARKLINE</a>
                 </p>
             </div><!-- /.span4 -->
             
