--- a/contact.html
+++ b/contact.html
@@ -84,22 +84,16 @@
             <!-- Responsive Navbar Part 1: Button for triggering responsive navbar (not covered in tutorial). Include responsive CSS to utilize. -->
 			<ul class="sf-menu color-m"> <!-- Menu color Class  "color-m"-->
                 <li><a href="home.html"><span class="icon-house"></span>Accueil</a></li>
-				<li><a href="#"><span class="icon-docs"></span>Chasse de jobs</a>					  
-                    <ul>
-						<li><a href="chassedejobs.html" class=" color">Concept & Valeurs ajoutées</a>
-                            <a href="fichesmetiers.html" class=" color">Les fiches métiers</a>
-                        </li>
-                    </ul>
-				</li>
-				<li><a href="blog.html"><span class="icon-cycle"></span>Blog</a></li>
-				<li><a href="team.html"><span class="icon-feather "></span>Equipe</a></li>
-                <li><a href="contact.html"><span class="icon-feather "></span>Contact</a></li>
+				<li><a href="chassedejobs.html"><span class="icon-target"></span>Chasse de jobs</a></li>
+				<li><a href="blog.html"><span class="icon-bubble"></span>Blog</a></li>
+				<li><a href="team.html"><span class="icon-users "></span>Equipe</a></li>
+                <li><a href="contact.html"><span class="icon-office "></span>Contact</a></li>
             </ul>
         </div><!-- /main-menu -->
     </div> <!-- /.container -->
 </div>
-<!-- FIN BAR NAVIGATION -->	
-
+<!-- FIN BAR NAVIGATION -->
+    
 <!-- BAR TITRE -->
 <div class="title-bar"><!-- style t-shadow/ t-gray/ -->
 	<div class="container ">
@@ -222,28 +216,6 @@
         </div>	<!--fpost_close-->	
         
         <div class="fbox">	
-            <h2>Nos derniers articles</h2>
-            <!--   hr-Start-->	
-            <div class="hr hr-left hr-light"> <!--   hr-center/ hr-left/ hr-right/  hr-short/ hr-light/-->
-                <span class="hr-inner">
-				    <span class="hr-inner-style"></span>
-				</span>
-            </div>
-            <!--   hr-Close-->					
-			<ul>
-                <li><a href="#">Default Post with Beautiful Preview Image.</a>
-				    <small>in <span>Default</span></small>
-				</li>
-				<li><a href="#">Default Post with Vimeo Video Player</a>
-					<small>in <span>Video</span></small>					
-				</li>
-				<li><a href="#">Default Post with Beautiful Sliding images</a>
-					<small>in <span>Slider</span></small>					
-				</li>
-            </ul>
-        </div>	<!--fpost_close-->	
-
-		<div class="fbox">	
             <h2>Nos derniers Tweets</h2>
             <!--   hr-Start-->	
             <div class="hr hr-left hr-light"> <!--   hr-center/ hr-left/ hr-right/  hr-short/ hr-light/-->
@@ -284,8 +256,7 @@
     <div class="container">
 	   <p>Copyright &copy; 2014 <span><a href="home.html" target="_blank">Sparkline</a></span> - Tous droits réservés</p>
 	</div>	
-</div>	
-	
+</div>
 </section>
 	
 </div>
