RAF: image data scientist, logo clients, texte process, bio Loïc

--- a/home.html
+++ b/home.html
@@ -180,15 +180,15 @@
 <!-- PITCH INTRO --> 
 <div class="span12 themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible left-to-right">
     <div class="blog blogin">
-        <a class="probtn com" href="#"><span class="icon-quote"></span></a>
+        <a class="probtn com" href="#"><span class="icon-bubbles"></span></a>
         <div class="quote">
             <p><i>#Visiteur : </i>Qu'est-ce que Sparkline ?</p>
-            <p><span><i>#Sparkline</i></span> <i>:</i> Nous sommes un cabinet de recrutement spécialisé dans les nouvelles technologies du Web et dans le Big Data.</p>
+            <p><span><i>#Sparkline</i></span> <i>:</i> Nous sommes un cabinet de recrutement spécialisé dans les métiers du Big Data et du Web.</p>
             <p><i>#Visiteur : </i>Mais encore ?</p>
-    <p><span><i>#Sparkline </i></span> <i>:</i> Notre approche du recrutement fait la différence... <span>La chasse de jobs</span></p>
+    <p><span><i>#Sparkline </i></span> <i>:</i> Notre approche du recrutement fait la différence : <b>la chasse de jobs.</b></p>
             <p><a class="button purchase themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible top-to-bottom" href="chassedejobs.html"
                   <span class="icon-info"></span>
-        Découvrez la chasse de jobs</a></p>
+        DECOUVREZ LA CHASSE DE JOBS</a></p>
         </div>
     </div><!-- /.span4 -->
 </div>
@@ -198,7 +198,7 @@
     <div class="container ">
         <!-- Two columns of text below the Box -->
         <div class="row-fluid"><!-- box-style row Class .box-style -->
-            <h1>Ils nous font confiance</h1>
+            <h1>Quelques références</h1>
             <!--   hr-Start-->	
 			<div class="hr hr-left"> <!--   hr-center/ hr-left/ hr-right/  hr-short/ hr-light/-->
 				<span class="hr-inner">
