--- a/team.html
+++ b/team.html
@@ -125,11 +125,11 @@
                     <div class="team-img">
                         <img class='themeapt_animated_image themeapt_image themeapt_animate_when_almost_visible left-to-right' src="images/team/elinore_thomas.jpg" alt="Elinore Thomas">
                         <div class="t_hover">
-                            <p>Diplômée en 2008 d’un Master de Mathématiques Appliquées, j'ai commencé comme consultante en informatique scientifique. J'ai ensuite travaillé comme ingénieur commercial au sein de plusieurs cabinets de conseil IT avant de créer Sparkline.</p>
+                            <p>Diplômée en 2008 d’un Master de Mathématiques Appliquées, j'ai commencé comme consultante en informatique scientifique. J'ai ensuite travaillé comme ingénieur commercial en cabinet de conseil IT avant de créer Sparkline.</p>
                         </div>				 
 				    </div>
                     <div class="team-data">
-                        <h2>Elinore Thomas <span class="icon-info"></span></h2>
+                        <h2>Elinore Thomas <span class="icon-bubble"></span></h2>
                         <p>Directeur Associée | Recruteur & Chasseur de jobs</p>
 				    </div>
                     <div class="team-sr">
@@ -149,11 +149,11 @@
                     <div class="team-img">
                         <img class='themeapt_animated_image themeapt_image themeapt_animate_when_almost_visible right-to-left' src="images/team/hadil_filali.jpg" alt="hadil filali">
                         <div class="t_hover">
-                            <p>Diplômé en d’un Master en Informatique en 2002 et d’un MBA à la Sorbonne en 2012, j'ai travaillé pendant 9 ans dans le développement d'applications Java/J2E. J'ai ensuite été ingénieur commercial au sein d'un cabinet de conseil IT avant de créer Sparkline.</p>
+                            <p>Diplômé d’un Master en Informatique en 2002 et d’un MBA à la Sorbonne en 2012, j'ai travaillé pendant 9 ans dans le développement d'applications Java/J2E. J'ai ensuite été ingénieur commercial en cabinet de conseil IT avant de créer Sparkline.</p>
                         </div>
                     </div>
                     <div class="team-data">
-                        <h2>Hadil Filali <span class="icon-info"></span></h2>
+                        <h2>Hadil Filali <span class="icon-bubble"></span></h2>
                         <p>Directeur Associé | Recruteur & Chasseur de jobs</p>
                     </div>
                     <div class="team-sr">
@@ -192,12 +192,11 @@
                     <div class="team-img">
                         <img class='themeapt_animated_image themeapt_image themeapt_animate_when_almost_visible right-to-left' src="images/team/loic_knuchel.jpeg" alt="Loïc Knuchel">
                         <div class="t_hover">
-                            <p>Après un rapide passage en SSII dans la finance, j'ai découvert la liberté du statut de freelance puis d'entrepreneur (Cookers / SalooN). Au delà du développement, je m'intéresse énormément aux problématiques métier et business des projets sur lesquels je travaille, cela passe notamment pas une réflexion sur l'UX et les données du produit. Je suis aussi organisateur des HumanTalks Paris et de Workshops sur Ionic.
-Technologies de prédilection: Scala, Play Framework, Angular, Ionic Framework</p>
+                            <p>Après un rapide passage en SSII, j'ai lancé plusieurs startups (Cookers, SalooN). Passionné du développement, j'organise les  HumanTalks Paris et des Workshops sur Ionic. Mes technos de prédilection : Scala, Play Framework, Angular, Ionic Framework.</p>
                         </div>
                     </div>
                     <div class="team-data">
-                        <h2>Loïc<span class="icon-info"></span></h2>
+                        <h2>Loïc<span class="icon-bubble"></span></h2>
                         <p>Développeur Full Stack Web & Mobile</p>
                     </div>
                     <div class="team-sr">
@@ -218,12 +217,12 @@ Technologies de prédilection: Scala, Play Framework, Angular, Ionic Framework</
                     <div class="team-img">
                         <img class='themeapt_animated_image themeapt_image themeapt_animate_when_almost_visible bottom-to-top' src="images/team/gilles_moyse.jpeg" alt="Gilles Moyse">
                         <div class="t_hover">
-                            <p>Aujourd'hui, fort d'une expérience de plus de 10 ans dans l'industrie, le service et le monde académique, je travaille avec Sparkline sur l'évaluation des candidats aux profils Data Mining / Machine Learning.</p>
+                            <p>Avec plus de 10 ans d'expérience dans l'industrie, le service et le monde académique, je travaille avec Sparkline sur l'évaluation des candidats aux profils Data Mining et Machine Learning.</p>
                         </div>
                     </div>
                     <div class="team-data">
-                        <h2>Gilles<span class="icon-info"></span></h2>
-                        <p>Artificial Intelligence, Data Mining, Algorithms</p>
+                        <h2>Gilles<span class="icon-bubble"></span></h2>
+                        <p>A.I., Data Mining, Algorithms</p>
                     </div>
                     <div class="team-sr">
                         <ul>
@@ -307,7 +306,7 @@ Technologies de prédilection: Scala, Play Framework, Angular, Ionic Framework</
 			<!--   hr-Close-->
 			<p><a class="brand" href="home.html"><img src="images/logo2_sparkline.png" alt="logo sparkline"/></a></p>
             <address>
-                <p><span class="icon-house"></span>144 Boulevard Haussmann, 75008 Paris, France.	</p>
+                <p><span class="icon-house"></span>114 Boulevard Haussmann, 75008 Paris, France.	</p>
 				<p><span class="icon-phone"></span>+33 681 547 032</p>
 				<p><span class="icon-mail"></span>info@sparkline.fr</p>
             </address>	<!--fpost_close-->
