--- a/home.html
+++ b/home.html
@@ -106,7 +106,9 @@
             <ul>
                 <!-- FIRST SLIDE -->
 				<li data-transition="3dcurtain-vertical" data-slotamount="10" data-masterspeed="300" data-thumb="images/thumbs/thumb1.jpg">
-				    <!-- THE CAPTIONS IN THIS SLIDE -->
+				    <!-- THE MAIN IMAGE IN THE FIRST SLIDE -->
+				    <img src="images/slides/sparkline_white_bgd.png" alt="" title="">
+                    <!-- THE CAPTIONS IN THIS SLIDE -->
 				    <div class="caption randomrotate" data-x="-220" data-y="0" data-speed="600" data-start="1000" data-easing="easeOutExpo">
                         <img src="images/slides/sparkline_background.png" alt="sparkline recruitment" title="Sparkline recruitment">
                     </div>
@@ -125,7 +127,7 @@
 
 				    <!-- THE MAIN IMAGE IN THE FIRST SLIDE 
 				    <img src="images/slides/sparkline_fonds_01.png" alt="image" title="sparkline recruitment"> -->
-                    <!-- THE CAPTIONS IN THIS SLDIE -->
+                    <!-- THE CAPTIONS IN THIS SLIDE -->
 					<div class="caption randomrotate" data-x="-220" data-y="0" data-speed="600" data-start="1000" data-easing="easeOutExpo">
                         <img src="images/slides/sparkline_background.png" alt="sparkline recruitment" title="Sparkline recruitment">
                     </div>
@@ -159,20 +161,29 @@
 <!-- FIN SLIDES -->
 
 <!-- PITCH INTRO --> 
-<div class="span12 themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible left-to-right">
-    <div class="blog blogin">
-        <a class="probtn com" href="#"><span class="icon-bubbles"></span></a>
-        <div class="quote">
-            <p><i>#Visiteur : </i>Qu'est-ce que Sparkline ?</p>
-            <p><span><i>#Sparkline</i></span> <i>:</i> Nous sommes un cabinet de recrutement spécialisé dans les métiers du Big Data et du Web.</p>
-            <p><i>#Visiteur : </i>Mais encore ?</p>
-    <p><span><i>#Sparkline </i></span> <i>:</i> Notre approche du recrutement fait la différence : <b>la chasse de jobs.</b></p>
-            <p><a class="button purchase themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible top-to-bottom" href="chassedejobs.html"
-                  <span class="icon-info"></span>
-        DECOUVREZ LA CHASSE DE JOBS</a></p>
+<div class="col-wrap "><!-- style col-shadow/ col-gray/ testimonial/-->
+    <div class="container ">
+        <!-- Two columns of text below the Box -->
+        <div class="row-fluid"><!-- box-style row Class .box-style -->
+            <div class="span12 themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible left-to-right">
+                <!-- <div class="blog blogin">
+                    <!-- <a class="probtn com" href="#"><span class="icon-bubbles"></span></a> -->
+                    <!-- <div class="quote"> -->
+                        <h1><span class="icon-bubbles"></span></h1>
+                        <h2><i>#Visiteur : </i>Qu'est-ce que Sparkline ?</h2>
+                        <h2><span><i>#Sparkline</i></span> <i>:</i> Nous sommes un cabinet de recrutement spécialisé dans les métiers du Big Data et du Web.</h2>
+                        <h2><i>#Visiteur : </i>Mais encore ?</h2>
+                        <h2><span><i>#Sparkline </i></span> <i>:</i> Notre approche du recrutement fait la différence : <b>la chasse de jobs.</b></h2>
+                        <p><a class="button purchase themeapt_animated_text themeapt_text  themeapt_animate_when_almost_visible top-to-bottom" href="chassedejobs.html">
+                        <span class="icon-info"></span>
+                        DECOUVREZ LA CHASSE DE JOBS</a></p>
+                    <!-- </div> -->
+                <!-- </div><!-- /.span4 -->
+            </div>
         </div>
-    </div><!-- /.span4 -->
+    </div>
 </div>
+    
 
 <!-- LISTE DES CLIENTS -->
 <div class="col-wrap "><!-- style col-shadow/ col-gray/ testimonial/-->
